Ajustes em endpoints
