# src/core/api/to_de_taxi/models/contrato-summary.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+export interface ContratoSummary {
+  id?: string;
+  conteudo?: string;
+  ultimaVersao?: boolean;
+}
