# src/core/api/to_de_taxi/swagger.json
@@ -5,6 +5,269 @@
     "title": "CloudMe ToDeTaxi API"
   },
   "paths": {
+    "/api/v1/Contrato": {
+      "get": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Gets all Contratos.",
+        "operationId": "ApiV1ContratoGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[IEnumerable[ContratoSummary]]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Modifies an existing Contrato.",
+        "operationId": "ApiV1ContratoPut",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "ContratoSUmmary",
+            "in": "body",
+            "description": "Modified Contrato list's properties summary",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/ContratoSummary"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Boolean]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Creates a new Cotnrato.",
+        "operationId": "ApiV1ContratoPost",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "ContratoSummary",
+            "in": "body",
+            "description": "Contrato's summary",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/ContratoSummary"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Guid]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Contrato/{id}": {
+      "get": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Gets a Contrato.\r\n<param name=\"id\">Contrato's ID</param>",
+        "operationId": "ApiV1ContratoByIdGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[ContratoSummary]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Removes an existing Contrato.",
+        "operationId": "ApiV1ContratoByIdDelete",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "DialList's ID",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Boolean]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Contrato/Ultimo_contrato_valido": {
+      "post": {
+        "tags": [
+          "Contrato"
+        ],
+        "summary": "Informa a localização de um Passageiro.",
+        "operationId": "ApiV1ContratoUltimo_contrato_validoPost",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[ContratoSummary]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
     "/api/v1/Corrida": {
       "get": {
         "tags": [
@@ -5840,6 +6103,118 @@
     }
   },
   "definitions": {
+    "Response[IEnumerable[ContratoSummary]]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ContratoSummary"
+          }
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
+    "ContratoSummary": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "conteudo": {
+          "type": "string"
+        },
+        "ultimaVersao": {
+          "type": "boolean"
+        }
+      }
+    },
+    "Notification": {
+      "type": "object",
+      "properties": {
+        "property": {
+          "type": "string",
+          "readOnly": true
+        },
+        "message": {
+          "type": "string",
+          "readOnly": true
+        }
+      }
+    },
+    "Response[Guid]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "format": "uuid",
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
+          "type": "string"
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
+    "Response[Boolean]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
+          "type": "boolean"
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
+    "Response[ContratoSummary]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "$ref": "#/definitions/ContratoSummary",
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)"
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
     "Response[IEnumerable[CorridaSummary]]": {
       "type": "object",
       "properties": {
@@ -5938,60 +6313,6 @@
         "tempoEmEspera": {
           "format": "int32",
           "type": "integer"
-        }
-      }
-    },
-    "Notification": {
-      "type": "object",
-      "properties": {
-        "property": {
-          "type": "string",
-          "readOnly": true
-        },
-        "message": {
-          "type": "string",
-          "readOnly": true
-        }
-      }
-    },
-    "Response[Guid]": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "format": "uuid",
-          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
-          "type": "string"
-        },
-        "success": {
-          "description": "Indica se a operação foi bem sucedida",
-          "type": "boolean"
-        },
-        "notifications": {
-          "description": "Notificações do domínio.",
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Notification"
-          }
-        }
-      }
-    },
-    "Response[Boolean]": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
-          "type": "boolean"
-        },
-        "success": {
-          "description": "Indica se a operação foi bem sucedida",
-          "type": "boolean"
-        },
-        "notifications": {
-          "description": "Notificações do domínio.",
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Notification"
-          }
         }
       }
     },
@@ -7605,7 +7926,7 @@
   "securityDefinitions": {
     "oauth2": {
       "flow": "implicit",
-      "authorizationUrl": "http://localhost:5000/connect/authorize",
+      "authorizationUrl": "https://auth.todetaxi.com.br/connect/authorize",
       "scopes": {
         "todetaxiapi": "TOdeTaxiAPI"
       },
